# JijModeling-Tutorials

./: .gitattributes  .gitignore  .textlintrc.json  README.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: docs.yml  python.yml  textlint.yml
.textlint-rules/: notation.yml
apis/: index.html  jijmodeling.html  search.js
apis/jijmodeling/: _jijmodeling.html  dataset.html  experimental.html  range.html
apis/jijmodeling/range/: size.html  value.html
assets/: basics-diagrams.ai  introduction-diagrams.ai
docs/: _config.yml  _toc.yml  getting_started.ipynb  introduction.ipynb  requirements.txt
docs/apis/: jijmodeling.html  search.js
docs/apis/jijmodeling/: _jijmodeling.html  dataset.html  (+4 more)
docs/basics/: constraint_and_penalty.ipynb  expressions.ipynb
docs/en/: ._config.yml.bak  .readthedocs.yaml  _config.yml  _toc.yml  getting_started.ipynb  introduction.ipynb  introduction.md  myst.yml
docs/ja/: ._toc.yml.bak  .readthedocs.yaml  _config.yml  _toc.yml  introduction.ipynb  introduction.md  myst.yml
docs/quickstart/: openjij.ipynb  scip.ipynb
docs/redirect/: 404.html  getting_started.html
docs/references/: cheat_sheet.ipynb  tips.ipynb
docs/releases/: jijmodeling-1.11.0.ipynb  jijmodeling-1.8.0.ipynb  jijmodeling-1.9.0.ipynb
docs/tutorials/: constraint_and_penalty.ipynb  creating_models.ipynb  expressions.ipynb  model_to_instance.ipynb  types_and_bounds.ipynb
en/: _toc.yml
en/releases/: jijmodeling-1.9.0.ipynb
en/tutorials/: creating_models.ipynb
markdowns/en/: introduction.md
markdowns/ja/: introduction.md
reference/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
releases/: jijmodeling-1.8.0.ipynb
templates/: release_note_en.ipynb  release_note_ja.ipynb
(+183 files in other folders)
