[project]
name = "jijmodeling-tutorial"
version = "2.0.0"
description = "Tutorial for JijModeling"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
  "jijmodeling == 2.0.0rc.5",
  "ommx-openjij-adapter >= 2.3.4, < 3.0.0",
  "ommx-pyscipopt-adapter >= 2.3.4, < 3.0.0",
  "ommx >= 2.3.4, < 3.0.0",
]

[project.optional-dependencies]
dev = [
  "jupyter-book >= 1.0.0, < 2.0.0",
  "jupytext >= 1.18.1, < 2.0.0",
  "nbconvert>=7.16.6, <8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.jupytext.formats]
"docs/" = "ipynb"
"markdowns/" = "md:myst"

[tool.setuptools]
packages = []
