[project]
name = "jijmodeling-tutorial"
version = "1.10.1"
description = "Tutorial for JijModeling"
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = [
  "jijmodeling >=1,<2",
  "jupyter-book>=1.0.4.post1",
  "ommx-openjij-adapter >= 2.0.0, < 3.0.0",
  "ommx-pyscipopt-adapter >= 2.0.0, < 3.0.0",
  "ommx >= 2.0.0, < 3.0.0",
  "openjij>=0.9.2",
  "pytest>=8.3.3",
]

[project.optional-dependencies]
dev = ["nbconvert>=7.16.4", "jupyter-book >= 1.0.0, < 2.0.0"]
